# ludo-android

./: .gitmodules  README.md
app/: build.gradle.kts
app/src/androidTest/java/com/siam11651/ludo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  main.cpp
app/src/main/cpp/includes/: android-out.hpp  renderer.hpp
app/src/main/cpp/includes/ludo/: animation.hpp  scene.hpp  sprite.hpp
app/src/main/cpp/includes/ludo/scenes/: match_scene.hpp  test_scene.hpp
app/src/main/cpp/src/: android-out.cpp  main.cpp  renderer.cpp
app/src/main/cpp/src/ludo/: animation.cpp  board.cpp  input.cpp  scene.cpp  screen.cpp  sprite.cpp  time.cpp
app/src/main/cpp/src/ludo/scenes/: match_scene.cpp  test_scene.cpp
app/src/main/java/com/siam11651/ludo/: MainActivity.kt
app/src/test/java/com/siam11651/ludo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
